# optitrack_python

./: .gitignore  README.md  pyproject.toml
diagnostics/: detect_frame_drops.py  rigid_body_tracker.py
examples/: SampleClient  hello_streaming_client.py  osc_receive_rigid_body.py  print_rigid_body.py  zmq_receive_rigid_body.py
natnet_diagnostics/: detect_frame_drops.py  rigid_body_tracker.py
natnetpacket/: NatNetClient.py
optitrack_python/: NatNetClient.py  __init__.py  motive_receiver.py  rigid_body.py
optitrack_python/streaming/: NatNetClient.py  __init__.py
scripts/: osc_send_rigid_body.py  zmq_send_rigid_body.py
