[tool.poetry]
name = "natnetpacket"
version = "4.1.0.0"
description = "This is a remake of NatNetSDK of optitrack.com"
authors = ["Vortex5Root"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
